# discord-ml

./: .gitignore  .travis.yml  Procfile  README.md  discord-ml.opam  dune-project
.github/workflows/: main.yml
src/: compat.ml  dune  logging.ml
src/compat/: dune  option.ml  result.ml
src/discord/: client.ml  config.ml  config.mli  discord.ml  dune
src/gateway/: client.ml  commands.ml  dune  events.ml  handlers.ml  opcode.ml  opcode.mli  state.ml
src/http/: actions.ml  client.ml  dune  endpoints.ml  endpoints.mli  http.ml
src/model/: actions.ml  cache.ml  dune  event.ml  message.ml  snowflake.ml  user.ml
